Refactor the code using anotations